--- a/website/stranger/index.html
+++ b/website/stranger/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="text-align: center">
     <p>Enter message to be displayed on Caleb's wall</p>
-    <form action="http://71.192.174.127:8080/stranger_wall/1.0.0/display" method="POST">
+    <form action="http://[your IP]:8080/stranger_wall/1.0.0/display" method="POST">
         <textarea name="message" rows="4" cols="50"></textarea><br>
         <input type="submit" value="submit">
     </form>
