Fixed error correction, formatting

--- a/website/stranger/index.html
+++ b/website/stranger/index.html
@@ -10,6 +10,6 @@
         <textarea name="message" rows="4" cols="50"></textarea><br>
         <input type="submit" value="submit">
     </form>
-
+    <p><a href="https://github.com/CalebKussmaul/Stranger-Things-Wall">project source code</a></p>
 </body>
 </html>
