--- a/website/stranger/index.html
+++ b/website/stranger/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="text-align: center">
     <p>Enter message to be displayed on Caleb's wall</p>
-    <form id="display" action="http://[your IP]:8080/stranger_wall/1.0.0/display" method="POST" onsubmit="this.submit(); this.reset(); return false;">
+    <form id="display" action="http://[your IP]:8080/stranger/display" method="POST" onsubmit="this.submit(); this.reset(); return false;">
         <textarea form="display" id="msg" name="message" rows="3" cols="40" maxlength="50"></textarea><br>
         <input type="submit" value="submit">
     </form>
