Removed redundant form tag and spam prevention

--- a/website/stranger/index.html
+++ b/website/stranger/index.html
@@ -6,8 +6,8 @@
 </head>
 <body style="text-align: center">
     <p>Enter message to be displayed on Caleb's wall</p>
-    <form id="display" action="http://[your IP]:8080/stranger/display" method="POST" onsubmit="this.submit(); this.reset(); return false;">
-        <textarea form="display" id="msg" name="message" rows="3" cols="40" maxlength="50"></textarea><br>
+    <form id="display" action="http://71.192.174.127:8080/stranger/display" method="POST" onsubmit="this.submit(); this.reset(); return false;">
+        <textarea name="message" rows="3" cols="40" maxlength="50"></textarea><br>
         <input type="submit" value="submit">
     </form>
     <br>
